--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>HomeZoo</title>
-    <link rel="stylesheet" href="homeZoo.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <nav></nav>
     <div class="bgimg1"></div>
@@ -23,13 +26,55 @@
     
     </div>
    
-    <div class="bgimg2"></div>
+    <div class="features">
+            <h1>What we offer</h1>
 
-    <div class="features"></div>
+       <ul class="features">
+
+           <li>
+               <h3>Daily or Overnight House Sitting</h3>
+               <p>Perfect for your long working hours.</p>
+           </li>
+           <li>
+               <h3>Dog Walking</h3>
+               <p>Whenever your dog needs a walk.</p>
+           </li>
+           <li>
+               <h3>Doggie Day Care</h3>
+               <p>Daytime care in your sitter's dog-friendly home</p>
+           </li>
+           <li>
+               <h3>Drop-in Visits</h3>
+               <p>For whenever you need a check-in or a play date.</p>
+           </li>
+           
+       </ul>
+
+
+    </div>
     <form>
+    <div class="bgimg2"></div>
+    <div class="features"></div>
+    <div class="container">
 
-    </form>
+        <div class="box">
+
+            <h1> Join us and let us make your dog happy!</h1>
+            <form>
+
+                <label>Email</label> <input type="Email" name="Email" />
+
+                <button>Send</button>
+                <p>
+                    <img class="img" src="dog-paw (1).svg" alt=""><img class="img" src="dog-paw (1).svg" alt="">
+                </p>
+
+            </form>
+        </div>
+    </div>
+
     <section class="aboutUs"></section>
 
 </body>
+
 </html>
